@@ -13,6 +13,7 @@ HEADERS   = src/qsamplerAbout.h \
 			src/qsamplerInstrumentForm.h \
 			src/qsamplerInstrumentListForm.h \
 			src/qsamplerDeviceForm.h \
+			src/qsamplerDeviceStatusForm.h \
 			src/qsamplerChannelStrip.h \
 			src/qsamplerChannelForm.h \
 			src/qsamplerChannelFxForm.h \
@@ -32,6 +33,7 @@ SOURCES   = src/main.cpp \
 			src/qsamplerInstrumentForm.cpp \
 			src/qsamplerInstrumentListForm.cpp \
 			src/qsamplerDeviceForm.cpp \
+			src/qsamplerDeviceStatusForm.cpp \
 			src/qsamplerChannelStrip.cpp \
 			src/qsamplerChannelForm.cpp \
 			src/qsamplerChannelFxForm.cpp \
