@@ -2,7 +2,7 @@
 //
 /****************************************************************************
    Copyright (C) 2004-2007, rncbc aka Rui Nuno Capela. All rights reserved.
-   Copyright (C) 2007, Christian Schoenebeck
+   Copyright (C) 2007, 2008 Christian Schoenebeck
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -143,6 +143,7 @@ protected:
 	void updateMessagesFont();
 	void updateMessagesLimit();
 	void updateMessagesCapture();
+	void updateViewMidiDeviceStatusMenu();
 	void startSchedule(int iStartDelay);
 	void stopSchedule();
 	void startServer();
