@@ -3,7 +3,7 @@
  <comment>qsampler - A LinuxSampler Qt GUI Interface.
 
    Copyright (C) 2004-2007, rncbc aka Rui Nuno Capela. All rights reserved.
-   Copyright (C) 2007, Christian Schoenebeck
+   Copyright (C) 2007, 2008 Christian Schoenebeck
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -105,6 +105,11 @@
     <property name="title" >
      <string>&amp;View</string>
     </property>
+    <widget class="QMenu" name="viewMidiDeviceStatusMenu" >
+     <property name="title" >
+      <string>MIDI Device Status</string>
+     </property>
+    </widget>
     <addaction name="viewMenubarAction" />
     <addaction name="viewToolbarAction" />
     <addaction name="viewStatusbarAction" />
@@ -112,6 +117,7 @@
     <addaction name="viewMessagesAction" />
     <addaction name="viewInstrumentsAction" />
     <addaction name="viewDevicesAction" />
+    <addaction name="viewMidiDeviceStatusMenu" />
     <addaction name="separator" />
     <addaction name="viewOptionsAction" />
    </widget>
